overflow corrected

--- a/style.css
+++ b/style.css
@@ -4,15 +4,19 @@
   box-sizing: border-box;
   /* width: 100%; */
 }
-
+html{
+  /* width: 100vw; */
+  overflow-x: hidden;
+}
 body {
   overflow-x: hidden;
   scroll-behavior: smooth;
+  width: 100vw;
 }
 
 header {
   background-image: url('./images/pasta-g999845d93_1920.jpg');
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
